# HOBL

./: .gitattributes  .gitignore  CONTRIBUTING.md  HOBL_Release_Notes.md  NOTICE.md  README.md  SUPPORT.md  hobl.cmd  requirements.txt
.github/: copilot-instructions.md
ScenarioMaker/: ScenarioMaker.cmd  ScenarioMaker.pyw  actions.py  button_style.qss  call_rpc.py  code_editor.py  connection_manager.py  dbg.py  default_params_template.py  filtered_button.py  image_label.py  key_map.py  list_style.qss  main_window.py  main_window.ui  main_window2.ui  nuget.config  remote.py  scenario_template.py  settings.py  settings.ui  tab.py  tab_style.qss
core/: action_list.py  alias_finder.py  app_scenario.py  arguments.py  call_rpc.py  hobl.py  parameters.py  remote_file_ops.py
docs/: HOBL Release Note Subscription.docx  Personal Access Tokens.docx  ai_study_report_weighting.json  android_study_report_template.xlsx  basic_study_report_template.xlsx  hobl_24_study_report_template.xlsx  hobl_ai_study_report_template.xlsx  hobl_ext_study_report_template.xlsx  hobl_pm_study_report_template.xlsx  hobl_study_report_template.xlsx  hobl_study_report_weighting.json
git_hooks/: post-merge
profile_templates/: default.ini  local.ini  local_simple.ini  simple.ini
providers/: GTP_CPI_BAM_Defender.wprp  abl_perf.wprp  full_th.wprp  full_th_wpp.wprp  multimedia.wprp  perf_utc.wprp  pmu.wprp  power.wprp  power_heavy.wprp  power_light.wprp  power_memory.wprp  productivity_perf.wprp  (+3 more)
utilities/open_source/map_luid_to_name/: .gitignore  CMakeLists.txt  build.cmd  map_luid_to_name.cpp
(+1532 files in other folders)
